Configuration pour déploiement Vercel

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "start:prod": "concurrently \"npm:start\" \"npm:start:ws\"",
     "start:ws": "node server/ws-server.js",
     "lint": "next lint",
-    "fix:observateur": "node scripts/fix-observateur-user.js"
+    "fix:observateur": "node scripts/fix-observateur-user.js",
+    "generate-secrets": "node scripts/generate-secrets.js"
   },
   "dependencies": {
     "@next-auth/mongodb-adapter": "^1.1.3",
