--- a/package.json
+++ b/package.json
@@ -42,19 +42,19 @@
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4",
     "@tailwindcss/postcss": "^4",
+    "tw-animate-css": "^1.3.4",
     "ws": "^8.18.2",
     "xlsx": "^0.18.5",
-    "concurrently": "^8.2.2"
+    "concurrently": "^8.2.2",
+    "typescript": "^5",
+    "@types/react": "^19",
+    "@types/react-dom": "^19"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/qrcode": "^1.5.5",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.3.4",
-    "tw-animate-css": "^1.3.4",
-    "typescript": "^5"
+    "eslint-config-next": "15.3.4"
   }
 }
