--- a/package.json
+++ b/package.json
@@ -13,19 +13,27 @@
     "lint": "next lint",
     "init-db": "node scripts/init-db.js",
     "fix:observateur": "node scripts/fix-observateur-user.js",
+    "fix:distributeur": "node scripts/fix-distributeur-user.js",
+    "add:distributeur": "node scripts/add-distributeur.js",
     "generate-secrets": "node scripts/generate-secrets.js"
   },
   "dependencies": {
     "@next-auth/mongodb-adapter": "^1.1.3",
     "@radix-ui/react-select": "^2.2.5",
+    "@tailwindcss/postcss": "^4",
+    "@types/jsbarcode": "^3.11.4",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
     "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
     "chart.js": "^4.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "concurrently": "^8.2.2",
     "dotenv": "^16.5.0",
     "framer-motion": "^12.18.1",
     "html2canvas": "^1.4.1",
+    "jsbarcode": "^3.12.1",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.2",
     "lucide-react": "^0.517.0",
@@ -43,17 +51,14 @@
     "swr": "^2.3.3",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4",
-    "@tailwindcss/postcss": "^4",
     "tw-animate-css": "^1.3.4",
-    "ws": "^8.18.2",
-    "xlsx": "^0.18.5",
-    "concurrently": "^8.2.2",
     "typescript": "^5",
-    "@types/react": "^19",
-    "@types/react-dom": "^19"
+    "ws": "^8.18.2",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/jsbarcode": "^3.11.4",
     "@types/node": "^20",
     "@types/qrcode": "^1.5.5",
     "eslint": "^9",
